--- a/src/Widget.css
+++ b/src/Widget.css
@@ -1,5 +1,32 @@
 .widget{
     flex:0.3;
-   
-
+}
+.widget-input{
+    display:flex;
+    align-items: center;
+    background-color: var(--twitter-background);
+    padding: 10px;
+        border-radius: 20px;
+        margin-top: 20px;
+        margin-left: 20px;
+}
+.widget-searchIcon{
+    color: gray;
+}
+.widget-input>input{
+    border: none;
+    padding: 10px;
+    /* border-radius: 10px; */
+    background-color: var(--twitter-background);
+}
+.widget-widgetContainer{
+    margin-top:10px;
+    margin-left: 20px;
+    padding:20px;
+    background-color: #f5f8fa;
+    border-radius: 20px;
+}
+.widget-widgetContainer>h2{
+    font-size: 18px;
+    font-weight: 800;
 }
